feat/frontend: add edit button in table Also finalize the table ui

--- a/frontend/src/styles/table.css
+++ b/frontend/src/styles/table.css
@@ -1,7 +1,29 @@
-tbody>tr {
-    height: 2.15rem;
-}
+ tbody>tr {
+     text-align: center;
+ }
 
-td {
-    padding-inline: 5px;
-}
+ /* Cell border */
+ td:not(thead>tr>td) {
+     border: 1px solid #125C38;
+     border-left: none;
+     border-top: none;
+ }
+
+ /* Date field width */
+ thead>tr>:nth-child(5) {
+     width: 9.1rem;
+ }
+
+ /* Cell padding */
+ td {
+     padding-inline: 4px
+ }
+
+ /* Description field */
+ tbody>tr>:nth-child(4) {
+     width: 20rem;
+ }
+
+ tbody>tr {
+     height: 2.16rem;
+ }
