--- a/frontend/src/styles/table.css
+++ b/frontend/src/styles/table.css
@@ -1,34 +1,33 @@
- tbody>tr {
-     text-align: center;
- }
+/* Cell border */
+td:not(thead>tr>td) {
+    border: 1px solid #125C38;
+    border-left: none;
+    border-top: none;
+}
 
- /* Cell border */
- td:not(thead>tr>td) {
-     border: 1px solid #125C38;
-     border-left: none;
-     border-top: none;
- }
+/* Date field width */
+thead>tr>:nth-child(5) {
+    width: 9.1rem;
+}
 
- /* Date field width */
- thead>tr>:nth-child(5) {
-     width: 9.1rem;
- }
+/* Cell padding */
+td {
+    padding-inline: 4px
+}
 
- /* Cell padding */
- td {
-     padding-inline: 4px
- }
+/* Description field */
+tbody>tr>:nth-child(4) {
+    min-width: 10rem;
+    text-align: justify;
+}
 
- /* Description field */
- tbody>tr>:nth-child(4) {
-     width: 20rem;
- }
+/* All row of table body */
+tbody>tr {
+    height: 2.16rem;
+    text-align: center;
+}
 
- tbody>tr {
-     height: 2.16rem;
- }
-
- /* all table rows */
- tr {
-     cursor: pointer;
- }
+/* all table rows */
+tr {
+    cursor: pointer;
+}
