--- a/frontend/src/styles/table.css
+++ b/frontend/src/styles/table.css
@@ -20,6 +20,11 @@ tbody>tr>:nth-child(4) {
     min-width: 10rem;
 }
 
+/* Amount field */
+tbody>tr>:nth-child(1) {
+    width: 8rem;
+}
+
 /* All row of table body */
 tbody>tr {
     height: 2.16rem;
